# vendor-risk-triage

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  _version.py  pyproject.toml
.github/workflows/: validate.yml
agent/: __init__.py  agent.py  output_models.py
baselines/: system_prompt_hash.txt
cli/: __init__.py  __main__.py  cmd_corpus.py  cmd_drift.py  cmd_migrate.py  cmd_render.py  cmd_triage.py  cmd_version.py  dispatcher.py  output.py
corpora/eu-ai-act/: eu-ai-act.bundle.tgz
corpora/nist-ai-rmf/: nist-ai-rmf.bundle.tgz
corpora/sox-pl-107-204/: sox-pl-107-204.bundle.tgz
detection/: README.md  __init__.py  types.py
detection/ai/: __init__.py  ai_threats.py
detection/privacy/: __init__.py  privacy_threats.py
detection/stride/: __init__.py  denial_of_service.py  elevation_of_privilege.py  information_disclosure.py  repudiation.py  spoofing.py  tampering.py
docs/: 00-problem-definition.md  01-risk-classification.md  02-out-of-scope.md  audit-log-shipping.md  corpus-manifest.md  cost-tracking-guide.md  customization-guide.md  data-model.md  determinism-attestation.md  end-to-end-example.md  maintenance-workflow.md  migration-guide.md  model-fallback-guide.md  multi-tenancy-guide.md  observability-guide.md  system-architecture.md
docs/governance/: README.md
docs/phases/: README.md
eval/: README.md  __init__.py  dataset.py  metrics.py  runner.py
examples/: input-submission.example.json  triage-record.example.json  validation-error.example.json
ingestion/: README.md  __init__.py  document.py  readers.py
migration/: __init__.py  engine.py  resolvers.py
observability/: __init__.py  bundle.py  correlation.py  events.py  metrics.py  tracing.py
pricing/: __init__.py  estimation.py  pricing.py
reporting/: README.md  __init__.py  audit_log.py  audit_pack.py  batch_index.py  styles.py
resilience/: __init__.py  circuit_breaker.py
retrieval/: README.md  __init__.py  bundle.py  chunk.py  corpora.py  corpus.py  embeddings.py  hybrid_index.py  index.py  retriever.py  sectionizer.py  vector_index.py
schemas/: README.md  __init__.py  input-contract-1.0.0.schema.json  output-contract-1.0.0.schema.json  output-contract-1.1.0.schema.json  output-contract-1.2.0.schema.json  output-contract-1.3.0.schema.json  output-contract-1.4.0.schema.json  validate.py
scripts/: build_corpus_bundles.py  bump_version.py  check_drift.py  check_system_prompt_hash.py  check_version_sync.py  extract_changelog.py  harvest_corpus_artifacts.py  measure_determinism_variance.py  prepare_release.py  print_corpus_hashes.py
src/: README.md
tenancy/: __init__.py  config.py  registry.py
tests/: README.md  test_agent_core.py  test_agent_determinism.py  test_agent_fallback.py  test_agent_tenancy.py  test_attacks.py  test_audit_log.py  test_bundle.py  test_calibration.py  test_circuit_breaker.py  test_citations.py  test_cli_cost_budget.py  test_cli_dispatcher.py  test_cli_migrate.py  test_cli_output.py  test_cli_triage_corpus.py  test_corpora_cache.py  test_corpora_registry.py  test_cost_tracking.py  test_demo_scenarios.py  test_detection_signatures.py  test_diagram.py  test_drift.py  test_e2e.py  test_estimation.py  test_eval.py  test_examples_validate.py  test_harvest_script.py  test_ingestion.py  test_judge.py  test_migration.py  test_observability.py  test_output_models.py  test_pricing.py  test_release_scripts.py  test_reporting.py  test_retrieval.py  test_sectionizer.py  test_tenancy.py  test_vector_hybrid.py  (+1 more)
(+65 files in other folders)
