[project]
name = "vendor-risk-triage"
version = "1.0.4"
description = "Reference implementation of an AI agent for vendor risk triage. Part of the sitkastack Framework."
requires-python = ">=3.11"
authors = [{name = "Robyn Toor", email = "robyn@sitkastack.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"

dependencies = [
    "jsonschema>=4.0.0",
    "pydantic>=2.6.4,<3",
    "pydantic-ai-slim[anthropic]>=1.0,<2",
    "pypdf>=6.10.2,<7",
    "rank-bm25>=0.2.2,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
vector = [
    "sentence-transformers>=2.7.0,<3",
]
otel = [
    "opentelemetry-api>=1.20.0,<2",
    "opentelemetry-sdk>=1.20.0,<2",
]

[project.scripts]
vrt = "cli.dispatcher:main"

[tool.setuptools]
# Explicit package list. Without this, setuptools' auto-discovery uses
# the "src layout" assumption and fails to find the flat-layout packages
# at the repo root. The framework intentionally uses flat layout
# because it has multiple top-level packages and a top-level _version.py.
packages = ["agent", "cli", "eval", "eval.attacks", "eval.calibration", "eval.citations", "eval.drift", "eval.judge", "ingestion", "observability", "pricing", "reporting", "migration", "resilience", "retrieval", "scripts", "tenancy"]
py-modules = ["_version"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "integration: integration tests that touch network or real corpora; skipped in default runs",
    "real_llm: tests that call a real LLM (requires API key, costs money); skipped in default runs",
    "e2e_subprocess: end-to-end test that invokes the installed vrt console script as a subprocess; runs by default but requires the package to be pip-installed",
]
addopts = [
    "-m", "not integration and not real_llm",
]
